# soundblaster-x-g6-gui

./: .gitignore  README.md  g6_component.py  g6_gui.py  g6_models.py  g6_tab_lighting.py  g6_tab_mixer.py  g6_tab_playback.py  g6_tab_recording.py  g6_tab_sbx.py  pyproject.toml  readme.md  requirements.txt
.run/: g6_gui (--dry-run).run.xml  g6_gui (--dry-run, --no-persist).run.xml  g6_gui (--help).run.xml  g6_gui (--version).run.xml  g6_gui (gtk debug).run.xml  g6_gui.run.xml
src/: g6_gui.py
src/g6_gui/: __init__.py  g6_console.py  g6_models.py  g6_tab_decoder.py  g6_tab_lighting.py  g6_tab_mixer.py  g6_tab_playback.py  g6_tab_recording.py  g6_tab_sbx.py  g6_util.py
